# cpp_microservice_sample

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config_conan.sh
src/: common_defs.hpp  defs.hpp  logger.hpp  main.cpp  rest.cpp  rest.hpp
src/pool/: asynctask.cpp  asynctask.hpp  pool.cpp  pool.hpp
tests/: check1.cpp
